--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -244,7 +244,8 @@ $button-base-transition-property: transform, box-shadow, color, background, bord
 
 // MARK: Ripples
 
-#{$button-selector} {
+#{$button-selector},
+.has-effect-when-pressed {
     &:not([disabled]) {
         &::before {
             content: "";
