Added parent class to style child links so that they only underline when being hovered

--- a/assets/v2/neon/neon-renderer.scss
+++ b/assets/v2/neon/neon-renderer.scss
@@ -43,10 +43,18 @@ html {
 
 :link,
 :visited {
-    &[href^="#"],
+    text-decoration: var(--link-text-decoration);
+
+    --link-text-decoration: underline;
+
+    &[href^="#"]:not(.navigates-away),
     &.does-not-navigate-away {
-        text-decoration: none;
         cursor: default;
+        --link-text-decoration: none;
+    }
+
+    .link-style-underline-on-hover &:not(:hover):not(:focus) {
+        --link-text-decoration: none;
     }
 }
 
