`.has-effect-when-pressed` elements are now always relative

--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -246,6 +246,9 @@ $button-base-transition-property: transform, box-shadow, color, background, bord
 
 #{$button-selector},
 .has-effect-when-pressed {
+
+    position: relative;
+
     &:not([disabled]) {
         &::before {
             content: "";
