--- a/assets/v2/neon/neon-shared-vars.scss
+++ b/assets/v2/neon/neon-shared-vars.scss
@@ -3,7 +3,7 @@
 //
 // Variables that all Neon subthemes use
 
-@import 'css-vars';
+@import "css-vars";
 $css-vars-use-native: true;
 
 
@@ -20,18 +20,24 @@ $dark-theme-foreground-color: hsl(0, 0%, 93%) !default;
 $black-theme-foreground-color: hsl(0, 0%, 93%) !default;
 $default-theme-foreground-color: var(--light-theme-foreground-color) !default;
 
+$theme-text-on-primary-color-color: #fff !default;
+$theme-text-on-accent-color-color: #000 !default;
+
 
 
 @include css-vars((
-    --white-theme-background-color:   $white-theme-background-color,
-    --light-theme-background-color:   $light-theme-background-color,
-    --dark-theme-background-color:    $dark-theme-background-color,
-    --black-theme-background-color:   $black-theme-background-color,
+    --theme-text-on-primary-color-color: $theme-text-on-primary-color-color,
+    --theme-text-on-accent-color-color: $theme-text-on-accent-color-color,
+
+    --white-theme-background-color: $white-theme-background-color,
+    --light-theme-background-color: $light-theme-background-color,
+    --dark-theme-background-color: $dark-theme-background-color,
+    --black-theme-background-color: $black-theme-background-color,
     --default-theme-background-color: $default-theme-background-color,
 
-    --white-theme-foreground-color:   $white-theme-foreground-color,
-    --light-theme-foreground-color:   $light-theme-foreground-color,
-    --dark-theme-foreground-color:    $dark-theme-foreground-color,
-    --black-theme-foreground-color:   $black-theme-foreground-color,
+    --white-theme-foreground-color: $white-theme-foreground-color,
+    --light-theme-foreground-color: $light-theme-foreground-color,
+    --dark-theme-foreground-color: $dark-theme-foreground-color,
+    --black-theme-foreground-color: $black-theme-foreground-color,
     --default-theme-foreground-color: $default-theme-foreground-color,
 ));
