#2 #11 Brought CSS Vars out of root for dark theme vars

--- a/assets/v2/neon/neon-air-vars.scss
+++ b/assets/v2/neon/neon-air-vars.scss
@@ -24,6 +24,7 @@ $theme-text-on-accent-color-color: hsla(205, 87%, 97%, 1);
     $theme-text-on-primary-color-color: #263238;
     $theme-text-on-accent-color-color: #000;
 
+    $css-vars-at-root: false;
     @include css-vars((
         --theme-primary-color: $theme-primary-color,
         --theme-accent-color: $theme-accent-color,
