#2 #11 #12 Placed SCSS var in wrong scope
This was not affecting the fix intended by #12

--- a/assets/v2/neon/neon-air-vars.scss
+++ b/assets/v2/neon/neon-air-vars.scss
@@ -17,6 +17,8 @@ $theme-text-on-accent-color-color: hsla(205, 87%, 97%, 1);
     --theme-text-on-accent-color-color: $theme-text-on-accent-color-color,
 ));
 
+$css-vars-at-root: null;
+
 .brightness-dark,
 .brightness-black {
     $theme-primary-color: #bbdefb;
@@ -24,7 +26,6 @@ $theme-text-on-accent-color-color: hsla(205, 87%, 97%, 1);
     $theme-text-on-primary-color-color: #263238;
     $theme-text-on-accent-color-color: #000;
 
-    $css-vars-at-root: false;
     @include css-vars((
         --theme-primary-color: $theme-primary-color,
         --theme-accent-color: $theme-accent-color,
