Link color animations

--- a/assets/v2/neon/neon-animation-renderer.scss
+++ b/assets/v2/neon/neon-animation-renderer.scss
@@ -38,6 +38,13 @@ html {
 
 
 
+:link,
+:visited {
+    transition-property: color;
+}
+
+
+
 .app-bar {
     transition-property: background-color, color, height, padding, margin;
 
