--- a/assets/v2/material/material-sidebar-renderer.scss
+++ b/assets/v2/material/material-sidebar-renderer.scss
@@ -1,4 +1,15 @@
 
+// material-sidebar-renderer
+//
+// Renders Material navigation drawers
+
+
+
+@import "material-sidebar-vars";
+@import "css-vars";
+
+
+
 .sidebar {
 
     position: fixed;
@@ -18,8 +29,7 @@
     background: var(--theme-background-color-at-level-raised);
     box-shadow: shadow(16);
 
-    .sidebar-shown &,
-    [data-sidebar=shown] &,
+    #{$sidebar-parent-sidebar-shown-selector} &,
     &:target {
         left: 0;
         transition-timing-function: cubic-bezier(0.06, 0, 0.25, 1);
@@ -72,5 +82,27 @@
         &:last-child {
             border-block-end-style: none;
         }
+    }
+}
+
+
+
+.sidebar-scrim {
+    position: fixed;
+    z-index: 1;
+    width: 100vw;
+    height: 100vh;
+
+    transition-property: background;
+    transition-delay: 0s, 3s;
+
+    background: var(--sidebar-scrim-background-hidden-color);
+
+    pointer-events: none;
+    user-select: none;
+
+    #{$sidebar-parent-sidebar-shown-selector} .sidebar-scrim {
+        background: var(--sidebar-scrim-background-color);
+        pointer-events: auto;
     }
 }
