--- a/assets/v2/neon/neon-water-vars.scss
+++ b/assets/v2/neon/neon-water-vars.scss
@@ -16,3 +16,20 @@ $theme-text-on-accent-color-color: #000;
     --theme-text-on-primary-color-color: $theme-text-on-primary-color-color,
     --theme-text-on-accent-color-color: $theme-text-on-accent-color-color,
 ));
+
+$css-vars-at-root: null;
+
+.brightness-dark,
+.brightness-black {
+    $theme-primary-color: #00b0ff;
+    $theme-accent-color: #fbc02d;
+    $theme-text-on-primary-color-color: #fff;
+    $theme-text-on-accent-color-color: #000;
+
+    @include css-vars((
+        --theme-primary-color: $theme-primary-color,
+        --theme-accent-color: $theme-accent-color,
+        --theme-text-on-primary-color-color: $theme-text-on-primary-color-color,
+        --theme-text-on-accent-color-color: $theme-text-on-accent-color-color,
+    ));
+}
