Added Material Chips

--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -330,3 +330,9 @@ $button-base-transition-property: transform, box-shadow, color, background, bord
 // MARK: - Sidebar
 
 @import "material-sidebar-renderer";
+
+
+
+// MARK: - Chips
+
+@import "material-chips";
