Better colors for Neon Fire with light brightnesses

--- a/assets/v2/neon/neon-fire-vars.scss
+++ b/assets/v2/neon/neon-fire-vars.scss
@@ -3,13 +3,13 @@
 //
 // Variables that the Neon Fire subtheme uses
 
-@import 'neon-shared-vars';
-@import 'css-vars';
+@import "neon-shared-vars";
+@import "css-vars";
 
-$theme-primary-color: #FF6E40;
-$theme-accent-color: #00E5FF;
-$theme-text-on-primary-color-color: #FFF;
-$theme-text-on-accent-color-color: #FFF;
+$theme-primary-color: #ff6e40;
+$theme-accent-color: #2196f3;
+$theme-text-on-primary-color-color: #fff;
+$theme-text-on-accent-color-color: #fff;
 
 @include css-vars((
     --theme-primary-color: $theme-primary-color,
@@ -17,3 +17,13 @@ $theme-text-on-accent-color-color: #FFF;
     --theme-text-on-primary-color-color: $theme-text-on-primary-color-color,
     --theme-text-on-accent-color-color: $theme-text-on-accent-color-color,
 ));
+
+
+.brightness-dark,
+.brightness-black {
+    $theme-accent-color: #00e5ff;
+
+    @include css-vars((
+        --theme-accent-color: $theme-accent-color,
+    ));
+}
