--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -31,7 +31,7 @@
 
         margin: 0;
 
-        transition-property: padding, line-height;
+        transition-property: padding, line-height, font-size;
 
         // line-height: $app-bar-height-phone-portrait - $app-bar-vertical-padding;
         line-height: calc(var(--app-bar-height-auto) - var(--app-bar-vertical-padding));
