--- a/assets/v2/material/material-chips.scss
+++ b/assets/v2/material/material-chips.scss
@@ -16,9 +16,8 @@
 #{$chip-button-selector} {
 
     display: inline-block;
-    height: 32px;
     margin: 0 8px;
-    padding: 0.75ex 12px;
+    padding: 0.75ex 1.5ex;
     border-radius: 99in;
     background-color: var(--chip-background);
 }
