--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -60,11 +60,6 @@ $button-base-transition-property: transform, box-shadow, color, background, bord
     @include flex-row($inline: true, $init-children: false);
     @include flex-justify-center();
     @include flex-align-center();
-    // align-items: center;
-    // flex-direction: row;
-    // justify-items: center;
-    // justify-content: center;
-    // align-content: center;
 
 
     -webkit-appearance: none;
@@ -102,8 +97,7 @@ $button-base-transition-property: transform, box-shadow, color, background, bord
 
 
 
-#{$common-button-selector},
-#{$image-button-selector} {
+#{$stationary-button-selector} {
     @at-root
     &,
     .app-bar & {
