Much better separation of concerns regarding buttons and chips
* Chips are not buttons

--- a/assets/v2/material/material-chips.scss
+++ b/assets/v2/material/material-chips.scss
@@ -13,8 +13,7 @@
 }
 
 
-#{$chip-button-selector} {
-
+#{$chip-selector} {
     display: inline-block;
     margin: 0 8px;
     padding: 0.75ex 1.5ex;
