--- a/assets/v2/material/material-chips.scss
+++ b/assets/v2/material/material-chips.scss
@@ -18,7 +18,7 @@
     margin: 0 8px;
     padding: 0.75ex 1.5ex;
     border-radius: 99in;
-    background-color: var(--chip-background);
+    background: var(--chip-background);
 }
 
 
