--- a/assets/v2/material/material-components-renderer.scss
+++ b/assets/v2/material/material-components-renderer.scss
@@ -50,6 +50,12 @@
 
 
 
+// MARK: - Cards
+
+@import "material-cards";
+
+
+
 // MARK: - Shadows
 
 @import "/assets/v2/material/material-shadows.css";
