Better spacing between icon and button content

--- a/assets/v2/material/material-buttons+icons.scss
+++ b/assets/v2/material/material-buttons+icons.scss
@@ -9,7 +9,7 @@
 #{$button-selector} {
     #{$icon-selector} {
 
-        margin: 0 1em;
+        margin: 0 1ex;
 
         &:first-child {
             margin-inline-start: 0;
